# taskbundle

./: .gitignore  DEMO.md  DESIGN.md  LICENSE  README.md  changelog.md
.github/workflows/: ci.yml  publish.yml
cli/: README.md  cli_helpers.py  pyproject.toml  run_helpers.py  task.py
cli/examples/: reproduce_tiers.sh
cli/examples/hello-task/: README.md  description.md  patch.diff  run-report.json  task.json
cli/examples/hello-task/repo/: pyproject.toml
cli/examples/hello-task/repo/mathx/: __init__.py  core.py
cli/examples/hello-task/repo/tests/: test_gcd.py
cli/examples/hello-task/tests/fail2pass/: test_factorial.py
cli/examples/hello-task/tests/pass2pass/: test_factorial_base.py
cli/examples/openai-demo/: Dockerfile  README.md  description.md  patch.diff  run-report.json  task.json
cli/examples/openai-demo/repo/: pyproject.toml
cli/examples/openai-demo/repo/calc/: __init__.py  core.py
cli/examples/openai-demo/sample-run/: README.md  run-report.json  solver.patch
cli/examples/openai-demo/tests/fail2pass/: test_add.py
cli/examples/openai-demo/tests/pass2pass/: test_add_identity.py
cli/solvers/: __init__.py  openai_agent.py
cli/taskbundle/: __init__.py  bundle.py  containers.py  db.py  evaluate.py  solver.py
cli/tests/: test_build.py  test_bundle.py  test_cli.py  test_containers.py  test_db.py  test_evaluate.py  test_integration.py  test_openai_agent.py  test_query.py  test_run.py
docs/: problem-and-solution.md  task-init.md  task-query.md  task-run.md  task-validate.md
examples/ansible-combine-vars/: Dockerfile  README.md  description.md  patch.diff  run-report.json  task.json
examples/ansible-combine-vars/tests/fail2pass/: test_combine_vars_replace.py
examples/ansible-combine-vars/tests/pass2pass/: test_vars_pass2pass.py
