[build-system]
requires = ["setuptools>=77"]   # >=77 for PEP 639 license expression / license-files
build-backend = "setuptools.build_meta"

[project]
name = "taskbundle"
version = "0.1.0"
description = "Containerized task-bundle CLI for LLM coding benchmarks (SWE-bench style)."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Yatharth Kapadia" }]
keywords = [
    "swe-bench",
    "llm",
    "benchmark",
    "evaluation",
    "coding-agents",
    "code-generation",
    "docker",
    "agents",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["typer>=0.12", "click>=8"]  # Typer (+ click, imported directly in main()'s exit-code shim); everything else is stdlib

[project.optional-dependencies]
test = ["pytest>=7"]  # `pip install -e ./cli[test]` to run the suite under pytest

[project.urls]
Homepage = "https://github.com/yatharthk2/taskbundle"
Repository = "https://github.com/yatharthk2/taskbundle"
Issues = "https://github.com/yatharthk2/taskbundle/issues"
Changelog = "https://github.com/yatharthk2/taskbundle/blob/main/changelog.md"

[project.scripts]
task = "task:main"  # entry point at the cli/ root

[tool.setuptools]
py-modules = ["task", "cli_helpers", "run_helpers"]   # entry point + its split-out helper modules
packages = ["taskbundle"]   # the library; the OpenAI agent (cli/solvers/) is a template to vendor into a bundle, not a shipped package

[tool.pytest.ini_options]
pythonpath = ["."]          # rootdir is cli/ (this file); put it on sys.path for `import task`
testpaths = ["tests"]
